# icu_qt_poc

./: CMakeLists.txt  README.md  icuconverter.cpp  icuconverter.h  icudetector.cpp  icudetector.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
